--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -8,13 +8,13 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-          <img class="d-block img-fluid" src="http://placeholder.com//900x350" alt="First slide">
+          <img class="d-block img-fluid" src="https://via.placeholder.com/900x350/000000/FFFFFF/" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="http://placeholder.com/900x350" alt="Second slide">
+          <img class="d-block img-fluid" src="https://via.placeholder.com/900x350/000000/FFFFFF/" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="http://placeholder.com/900x350" alt="Third slide">
+          <img class="d-block img-fluid" src="https://via.placeholder.com/900x350/000000/FFFFFF/" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
